<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="demo.android.hello.com.bmobdemo1.MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
         />

    <Button
        android:id="@+id/btn_insert_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_user"
        />

    <Button
        android:id="@+id/btn_update_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_user"
        />

    <Button
        android:id="@+id/btn_delete_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        />

    <Button
        android:id="@+id/btn_querry_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/querry_user"
        />

    <Button
        android:id="@+id/btn_querry_datas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/querry_users"
        />

</LinearLayout>
